--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,15 @@
   "extra": {
     "branch-alias": {
       "dev-master": "1.0-dev"
-    }
+    },
+    "laravel": {
+            "providers": [
+                "Arquivei\\LaravelPrometheusExporter\\PrometheusServiceProvider"
+            ],
+            "aliases": {
+                "Debugbar": "Barryvdh\\Debugbar\\Facade"
+            }
+        }
   },
   "config": {
     "sort-packages": true
